--- a/bin/build
+++ b/bin/build
@@ -13,16 +13,25 @@ import re
 import logging
 import argparse
 import json
+import inspect
 from pprint import pprint
 from itertools import chain
 from subprocess import Popen, PIPE
+from os.path import abspath, dirname, join, basename
 
 # Related third party imports.
 #
 
-# GLOBAL CONSTANT names.
+def get_script_dir():
+    return dirname(abspath(
+        inspect.getfile(inspect.currentframe()))).rstrip(os.sep)
+
+# Configuration and GLOBAL CONSTANT names.
 PN = os.path.splitext(os.path.basename(sys.argv[0]))[0]
-LOG_FMT = '[{0}]: %(message)s'.format(PN)
+configfp = join(dirname(get_script_dir()), 'package.json')
+with open(configfp) as f:
+    CFG = json.load(f)['config']
+LOG_FMT = CFG['log_format'].format(PN)
 
 def on_exit():
     gc.collect()
@@ -38,7 +47,7 @@ def get_tagged_resources(metadata, tags):
                 yield resource
 
 # Setup
-logging.basicConfig(format=LOG_FMT, level=logging.INFO)
+logging.basicConfig(format=CFG['log_format'].format(PN), level=logging.INFO)
 parser = argparse.ArgumentParser()
 parser.add_argument('data')
 parser.add_argument('metadata')
