--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "includes": "_includes",
     "stylesheets": "css",
     "tag_tmpl": "by_tag.html",
-    "resource_tmpl": "resource.html",
     "tag_link_tmpl": "<li><a href=\"./tags/{tag}.html\">{tag}</a></li>",
     "tag_links_tmpl": "<ul>{tags}</ul>",
+    "resource_tmpl": "resource.html",
+    "resource_link_tmpl": "<li><a href=\"../resources/{resource}.html\">{resource}</a></li>",
+    "resource_links_tmpl": "<ul>{resources}</ul>",
 
     "uri": {
       "home": "index.html",
